--- a/index.html
+++ b/index.html
@@ -888,14 +888,11 @@
 
         function getStateStyle(adminLevel, layerState = undefined) {
             var color = "#000000";
-            var weight = 1;
+            var weight = 1.5;
             var dashArray = '';
             if (adminLevel == undefined) {
                 color = "#fff";
-                weight = 4;
-                dashArray = '';
             } else {
-                dashArray = '';
                 switch (adminLevel.toString()) {
                     case "1":
                         color = "#d32f2f";
@@ -908,11 +905,11 @@
                         break;
                     case "4":
                         color = "#fbc02d";
-                        weight = 4.5;
+                        weight = 2.5;
                         break;
                     case "5":
                         color = "#512da8";
-                        weight = 2.5;
+                        weight = 2;
                         break;
                     case "6":
                         color = "#26c6da";
@@ -927,7 +924,7 @@
                 weight: weight,
                 //color: '#c5e1a5',
                 color: color,
-                dashArray: dashArray,
+                //dashArray: '',
                 fillOpacity: 0.0,
                 opacity: 1
             };
@@ -935,34 +932,6 @@
                 styleObject = applyStateSelectedStyle(layerState, styleObject);
             }
             return styleObject;
-        }
-
-        function getStateColor(adminLevel) {
-            var color = "#000000";
-            switch (adminLevel.toString()) {
-                case "1":
-                    color = "#d32f2f";
-                    break;
-                case "2":
-                    color = "#c2185b";
-                    break;
-                case "3":
-                    color = "#7b1fa2";
-                    break;
-                case "4":
-                    color = "#fbc02d";
-                    break;
-                case "5":
-                    color = "#512da8";
-                    break;
-                case "6":
-                    color = "#1976d2";
-                    break;
-                case "7":
-                    color = "#00796b";
-                    break;
-            }
-            return color;
         }
 
         function applyStateSelectedStyle(layerState, styleObject) {
@@ -1025,7 +994,9 @@
                 currentStateCopy = L.geoJSON(layer.toGeoJSON(), {
                     pane: 'states-top',
                     style: function() {
-                        return getStateStyle(undefined);
+                        styleObject = getStateStyle(layer.feature.properties.admin_level, undefined);
+                        styleObject.color = '#ffffff';
+                        return styleObject;
                     }
                 });
                 currentStateCopy.adminLevel = layer.feature.properties.admin_level;
