--- a/index.html
+++ b/index.html
@@ -277,11 +277,60 @@
                 properties: [
                     "name"
                 ]
+            },
+            'admin-levels-4': {
+                name: "Admin Levels 4",
+                nameSingular: "Admin Level 4",
+                zIndex: 1014,
+                selectedZIndex: 1013,
+                style: {
+                    normal: {
+                        weight: 2,
+                        color: '#F9A825', //900
+                        //dashArray: '3',
+                        fillOpacity: 0.0
+                    },
+                    selected: {
+                        weight: 2.5,
+                        //color: '#e0f2f1',
+                        color: '#FFF59D', //200
+                        dashArray: '',
+                    }
+                },
+                clickThrough: true,
+                properties: [
+                    "name"
+                ]
+            },
+            'admin-levels-5': {
+                name: "Admin Levels 5",
+                nameSingular: "Admin Level 5",
+                zIndex: 1013,
+                selectedZIndex: 1014,
+                style: {
+                    normal: {
+                        weight: 2,
+                        color: '#1A237E',
+                        //dashArray: '3',
+                        fillOpacity: 0.0
+                    },
+                    selected: {
+                        weight: 2.5,
+                        //color: '#e0f2f1',
+                        color: '#9FA8DA',
+                        dashArray: '',
+                    }
+                },
+                clickThrough: true,
+                properties: [
+                    "name"
+                ]
             }
         };
 
         var featureCollectionsFeatureGroups = {};
         var currentFeature = undefined;
+        var featureCollectionsCurrentFeature = {};
         var quizQuestionTypesFeatureCollections = {};
 
         for (featureCollection in featureCollections) {
@@ -302,6 +351,7 @@
                 pane: featureCollectionName
             }).addTo(map);
             featureCollectionsFeatureGroups[featureCollectionName] = featureCollectionFeatureGroup;
+            featureCollectionsCurrentFeature[featureCollectionName] = undefined;
 
             createFeatureCollectionCheckboxes(featureCollectionName);
             createFeatureCollectionQuizCheckboxes(featureCollectionName);
@@ -1302,7 +1352,7 @@
 
         function getFeatureStyle(layerFeature) {
             var result;
-            if (layerFeature != undefined && layerFeature == currentFeature) {
+            if (layerFeature != undefined && layerFeature == featureCollectionsCurrentFeature[layerFeature.featureCollectionName]) {
                 /*if (layerFeature.geometry.type == "Polygon") {
 
                 } else {
@@ -1361,10 +1411,13 @@
                 return;
             }
 
-            unselectFeature(currentFeature);
+            unselectFeature(featureCollectionsCurrentFeature[layerFeature.featureCollectionName]);
 
-            currentFeature = layerFeature;
+            featureCollectionsCurrentFeature[layerFeature.featureCollectionName] = layerFeature;
             updateFeatureStyle(layerFeature);
+
+            layerFeature.bringToFront();
+
             updateDetails();
         }
 
@@ -1373,9 +1426,11 @@
                 unselectCity(currentCity);
             }*/
 
-            currentFeature = undefined;
-            updateFeatureStyle(layerFeature);
-            updateDetails();
+            if (layerFeature != undefined) {
+                featureCollectionsCurrentFeature[layerFeature.featureCollectionName] = undefined;
+                updateFeatureStyle(layerFeature);
+                updateDetails();
+            }
         }
 
         function zoomToFeature(layerFeature) {
